fix: Ultor initial load & navbar z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,4 +44,5 @@
     color-scheme: dark;
     background-color: #02040D;
     color: white;
+    font-size: 0.95em;
 }
